# AstroBox-NG-Module-Core

./: Cargo.toml  README.md
src/: asyncrt.rs  constants.rs  device.rs  ecs.rs  error.rs  events.rs  lib.rs  tools.rs
src/crypto/: aesccm.rs  aesctr.rs
src/device/: data.rs  install.rs  resource.rs  sync.rs  thirdparty_app.rs  vivo.rs  watchface.rs  xiaomi.rs
src/device/vivo/: crypto.rs  dial_manifest.rs  packet.rs  quickapp_manifest.rs  system.rs
src/device/vivo/components/: auth.rs  cloud_bridge.rs  erpc.rs  file_v2_transfer.rs  info.rs  install.rs  mod.rs  ota.rs  resource.rs  shared.rs  sync.rs  thirdparty_app.rs  watchface.rs
src/device/vivo/transport/: ble.rs  file_v2.rs  mod.rs  vscp.rs
src/device/xiaomi/: config.rs  packet.rs  resutils.rs  system.rs  transport_profiler.rs  type.rs
src/device/xiaomi/components/: auth.rs  info.rs  install.rs  mass.rs  media.rs  mod.rs  report.rs  resource.rs  shared.rs  sync.rs  thirdparty.rs  thirdparty_app.rs  watchface.rs
src/device/xiaomi/components/network/: mod.rs
src/device/xiaomi/components/network/native/: dhcp.rs  meter.rs  mod.rs  tun.rs
src/device/xiaomi/packet/: cipher.rs  dispatcher.rs  mass.rs  v2.rs
src/device/xiaomi/packet/v2/: layer1.rs  layer1cmd.rs  layer2.rs
src/device/xiaomi/sar/: command_pool.rs  mod.rs
src/ecs/: README.md  access.rs  component.rs  entity.rs  fastlane.rs  graph.rs  logic_component.rs  runtime.rs  system.rs
src/logger/: wasm.rs
src/models/: sync.rs
