[package]
name = "corelib"
version = "2.0.0"
edition = "2024"

[dependencies]
# --- crypto / hash ---
sha2 = "0.10.9"
sha1 = "0.10"
hmac = "0.12.1"
rc4 = "0.1"
cipher = "0.4"
aes = "0.8.4"
ctr = "0.9.2"
ccm = "0.5.0"
crc = "3.3.0"
md-5 = "0.10.6"
aes-gcm = "0.10.3"

once_cell = "1.21.3"
parking_lot = "0.12.5"
flume = "0.11.1"
async-trait = "0.1.89"
num_enum = "0.7.5"
anyhow = "1.0.100"
log = { version = "0.4.28", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
serde = "1"
serde_json = "1"
serde_repr = "0.1"
erased-serde = "0.4"
byteorder = "1.5"
web-time = "1"
pb = { path = "../pb" }
prost = "0.14.1"
nanorand = "0.8"
hex = "0.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "io-util",
    "net",
] }
tokio-util = "0.7"
ipstack = { git = "http://github.com/narrowlink/ipstack/", branch = "main" }
udp-stream = { version = "0.0", default-features = false }
pcap-file = "2.0.0"
packet_crafter = "0.2.0"
dhcproto = "0.14.0"
etherparse = { version = "0.19", default-features = false, features = ["std"] }
chrono = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
    "time",
    "sync",
    "io-util",
] }
futures = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
gloo-timers = { version = "0.3", features = ["futures"] }
