[package]
name = "corelib"
version = "2.0.0"
edition = "2024"

[dependencies]
# --- crypto / hash ---
sha2 = "0.11.0"
sha1 = "0.11"
hmac = "0.13.0"
rc4 = "0.2"
cipher = "0.5"
aes = "0.9.0"
ctr = "0.10.0"
ccm = "0.6.0-rc.3"
crc = "3.4.0"
md-5 = "0.11.0"
aes-gcm = "0.10.3"

once_cell = "1.21.4"
parking_lot = "0.12.5"
flume = "0.12.0"
async-trait = "0.1.89"
num_enum = "0.7.6"
anyhow = "1.0.102"
log = { version = "0.4.29", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
serde = "1"
serde_json = "1"
serde_repr = "0.1"
erased-serde = "0.4"
byteorder = "1.5"
web-time = "1"
bevy_ecs = "0.18"
pb = { path = "../pb" }
prost = "0.14.3"
nanorand = "0.8"
hex = "0.4.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "io-util",
    "net",
] }
tokio-util = "0.7"
ipstack = { git = "http://github.com/searchstars/ipstack-astrobox/", branch = "main" }
udp-stream = { version = "0.0", default-features = false }
pcap-file = "2.0.0"
packet_crafter = "0.2.0"
dhcproto = "0.14.0"
etherparse = { version = "0.20", default-features = false, features = ["std"] }
chrono = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
    "time",
    "sync",
    "io-util",
] }
futures = "0.3"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
gloo-timers = { version = "0.4", features = ["futures"] }
